# ai-dtctm

./: .env.example  .gitignore  Dockerfile  GITHUB_RELEASE_WALKTHROUGH.md  QUICKSTART.md  auth_ui.py  build_portable.py  build_windows.py  config.py  deploy_to_github.py  docker-compose.yml  launcher.py  package_for_release.py  pyproject.toml  requirements.txt  run_demo_login.bat  web_install.ps1
.claude/: launch.json
.streamlit/: config.toml
_pages/: pg_admin.py  pg_batch_scanner.py  pg_digital_twin.py  pg_forensic_scanner.py
core/: apk_analyzer.py  attack_blueprint.py  cache.py  clone_attacks.py  cloud_sync.py  cve_scanner.py  database_attack_lab.py  database_twin.py  deep_file_model.py  deep_url_model.py  forensic_scanner.py  hygiene_scorer.py  live_threat_feed.py  logger.py  login_attack_suite.py  ml_classifier.py  ml_model_manager.py  pdf_report_generator.py  rbac.py  screenshot_capture.py  shared_css.py  source_clone.py  source_recon.py  twin_assistant.py  url_intelligence.py  url_validator.py
data/: model_tracking.db  scan_history.db  securex.db  test_malware.py
datasets/: legitimate_urls.txt  malware_signatures.txt  phishing_urls.txt  threat_intelligence.txt
datasets_large/: legitimate_urls.txt  legitimate_urls_100k.txt  phishing_urls.txt  phishing_urls_100k.txt
docs/: architecture.md  demo_script.md
dtctm_sdk/: __init__.py  client.py  exceptions.py  models.py
installer/: AI-DTCTM.iss  do_sign.ps1  sign_setup.ps1  trust_publisher.ps1
models/: deep_file_v1.npz  deep_file_v1_meta.json
portable/: README.txt  install.bat  uninstall.bat
sample_databases/: create_all_samples.py  create_college_db.py  safe_03_school_library.db
scripts/: dtctm_cli.py  generate_training_data_100k.py  pull_docker_images.sh  test_api.py  train_model_advanced.py  verify_apis.py
test_files/: malware.js  trojan.py  webshell.php
test_files_sample/: 1_clean_hello_world.py  2_clean_readme.txt  3_suspicious_encoded_strings.py  4_spyware_credentials.py  5_obfuscated_malware.py  6_suspicious_batch.bat  7_ransomware_pattern.ps1  8_cryptominer_botnet.py  9_privilege_escalation.py  FILES_vs_DATABASE_GUIDE.md  HOW_TO_TEST_REAL.md  IMPORTANT_README.txt  README_TEST_FILES.md  TEST_BREAKDOWN.md  safe_01_calculator.py  safe_02_config.json  safe_03_report.html  safe_04_data.csv  safe_05_backup_script.sh  (+5 more)
(+105 files in other folders)
